plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'dugout'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.jsoup:jsoup:1.15.4'
	implementation 'com.fasterxml.jackson.core:jackson-databind'

	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'


	// Selenium
	implementation 'org.seleniumhq.selenium:selenium-java:4.11.0'
	// ChromeDriver 자동 관리를 위한 WebDriverManager
	implementation 'io.github.bonigarcia:webdrivermanager:5.5.0'
	
	// Swagger 의존성 추가
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

	//Webflux
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	//thymeleaf
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

	// HTML 파싱(Jsoup)
	implementation 'org.jsoup:jsoup:1.16.1'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// MacOS용 Netty DNS 리졸버 의존성
	implementation 'io.netty:netty-resolver-dns-native-macos:4.1.107.Final:osx-aarch_64'

	// AwS s3 의존성
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
}

tasks.named('test') {
	useJUnitPlatform()
}

//tasks.jar {
//	this.enabled = false
//}

jar {
	enabled = false
}